Fix #93 make devise errors visible

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -357,7 +357,6 @@
   z-index: 1005;
   bottom: 0;
   left: 0;
-  height: 60px;
 }
 
 .container {
